my-k8s-ui/docs/oidc-server-with-sqs/oidc-dev-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc-dev-server
  namespace: default
  labels:
    app: oidc-dev-server
    app.kubernetes.io/name: oidc-dev-server
    app.kubernetes.io/component: idp
spec:
  selector:
    app: oidc-dev-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
